--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "express-session": "^1.15.1",
     "mongoose": "^4.8.5",
     "multer": "^1.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
