--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "file-type": "^4.1.0",
+    "formidable": "^1.1.1",
     "mongoose": "^4.8.5",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "read-chunk": "^2.0.0"
   }
 }
