--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.15.1",
     "file-type": "^4.1.0",
     "formidable": "^1.1.1",
+    "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
